--- a/templates/actor/trait.hbs
+++ b/templates/actor/trait.hbs
@@ -3,9 +3,10 @@
     <div class='item-image'>
       <img src='{{trait.img}}' title='{{trait.name}}' width='24' height='24' />
     </div>
-    <div>{{trait.name}}
-      {{#if (eq trait.system.type 'skill')}}
-      {{#if (gt trait.system.skill_mod_final 0)}}(+{{trait.system.skill_mod_final}}){{/if}}
+    <div title="{{getItemTitle trait}}">
+      {{trait.name}}
+      {{#if (and (eq trait.system.type 'skill') (gt trait.system.skill.modifier_final 0))}}
+      (+{{trait.system.skill.modifier_final}})
       {{/if}}
     </div>
   </div>
