--- a/templates/chat/morale-roll-result.hbs
+++ b/templates/chat/morale-roll-result.hbs
@@ -10,21 +10,10 @@
       </div>
     </div>
   </div>
-
-  <div
-    class='custom-result'
-    style='
-    text-align: center;
-    margin-top: 10px;
-    padding: 5px;
-    border: 2px solid;
-    border-radius: 5px;
-    background: rgba(0, 0, 0, 0.1);
-    border-color: {{borderColor}};'
-  >
-    <h4 style='margin:0; text-transform: uppercase;'>
+  <div class='custom-result'>
+    <h6 style='margin:0; text-transform: uppercase;'>
       {{outcome}}
-    </h4>
+    </h6>
     <p style='margin:0; font-size: 14px;'>
       {{message}}
     </p>
