--- a/templates/actor/biography.hbs
+++ b/templates/actor/biography.hbs
@@ -2,10 +2,16 @@
 <section class='tab biography {{tab.cssClass}}' data-group='primary' data-tab='biography'>
   {{! Editors must receive enriched text data from getData to properly handle rolls, UUID links, etc. }}
   {{#if editable}}
-  <prose-mirror name="system.biography" data-document-u-u-i-d="{{actor.uuid}}" value="{{system.biography}}"
-    collaborate="true" toggled="true">
+    <prose-mirror
+      name='system.biography'
+      data-document-u-u-i-d='{{actor.uuid}}'
+      value='{{system.biography}}'
+      collaborate='true'
+      toggled='true'
+    >
+      {{{enrichedBiography}}}
+    </prose-mirror>
+  {{else}}
     {{{enrichedBiography}}}
-  </prose-mirror>
-  {{else}} {{{enrichedBiography}}}
   {{/if}}
 </section>
