--- a/templates/actor/burdens.hbs
+++ b/templates/actor/burdens.hbs
@@ -5,8 +5,7 @@
       <div class='item-name'></div>
       {{!-- <div class='item-formula'>{{localize 'SDM.Item.Gear.FIELDS.rollFormula.label'}}</div> --}}
       <div class='item-formula' title="{{localize 'SDM.BurdensPenalty'}}">
-        {{localize 'SDM.InventoryBurdens'}}
-        [{{@root.burdenSlotsTaken}}/{{@root.system.burden_slots}}]
+        {{localize 'SDM.InventoryBurdens'}} [{{@root.burdenSlotsTaken}}{{#if (ne @root.actor.type 'npc')}}/{{@root.system.burden_slots}}{{/if}}]
       </div>
       <div class='item-controls'>
         {{#if @root.editable}}
@@ -26,28 +25,14 @@
          {{> ($$ "actor/trait") trait=burden }}
       {{/if}}
        {{#if (eq burden.type 'burden')}}
-        <li class='item flexrow' data-item-id='{{burden._id}}' data-drag='true' data-document-class='Item'>
+        <li class='item flexrow' data-item-id='{{burden._id}}' data-drag='true' data-document-class='Item' title="{{getItemTitle burden}}">
           <div class='item-name'>
             <div class='item-image'>
-              <img src='{{burden.img}}' title='{{burden.name}}' width='24' height='24' />
+              <img src='{{burden.img}}' width='24' height='24' />
             </div>
             <div>{{burden.name}}</div>
           </div>
           <div class='item-controls'>
-            {{#if (eq burden.type 'gear')}}
-            <a class="item-control">
-              <i class="fa-regular fa-shield" style="{{getReadiedStyle burden.system.readied}}" data-action="toggleReadied"
-                {{#if burden.system.readied}}
-                  title="{{localize 'SDM.ItemReadied' }}"
-                {{else}}
-                  title="{{localize 'SDM.ItemNotReadied'}}"
-                {{/if}}
-              ></i>
-            </a>
-            <a class="item-control">
-              <i class="fa-regular fa-exchange" data-action="transferItem" title="{{localize "DOCUMENT.Transfer" type=(localize 'TYPE.Item')}}"></i>
-            </a>
-            {{/if}}
             <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=(localize (lookup @root.config.itemType burden.type))}}'
               data-action='viewDoc'>
               <i class='fas fa-edit'></i>
