--- a/templates/actor/item.hbs
+++ b/templates/actor/item.hbs
@@ -1,18 +1,40 @@
-<li class='item flexrow' data-item-id='{{item._id}}' data-drag='true' data-document-class='Item'>
+<li
+  class='item flexrow'
+  data-item-id='{{item._id}}'
+  data-drag='true'
+  data-document-class='Item'
+  title="{{getItemTitle item}}"
+>
   <div class='item-name'>
     <div class='item-image'>
-      <img src='{{item.img}}' title='{{item.name}}' width='24' height='24' />
+      <img src='{{item.img}}' width='24' height='24' />
     </div>
-    <div class="flexrow" title="{{getItemTitle item}}">
+    <div class="flexrow">
       {{#if (and (eq item.system.type 'weapon') item.system.readied)}}
-      <div class='rollable flexrow' data-action='roll' data-type='damage' data-label='{{item.name}}'>
-        <i class='fa-solid fa-dice-d20 roll-icon' title='{{item.name}}'></i>
+      <div
+        class='rollable flexrow'
+        data-action='roll'
+        data-type='damage'
+        data-label='{{item.name}}'
+        title="{{localize 'SDM.RollType' type=(localize 'SDM.Damage')}}"
+      >
+        <i class='fa-solid fa-dice-d20 roll-icon'></i>
       </div>
       {{/if}}
 
-      {{#if (and (eq item.system.type 'power') item.system.readied item.system.power.roll_formula)}}
-      <div class='rollable flexrow' data-action='roll' data-type='power' data-label='{{item.name}}'>
-        <i class='fa-solid fa-dice-d20 roll-icon' title='{{item.name}}'></i>
+      {{#if (and
+        (eq item.system.type 'power')
+        item.system.readied
+        item.system.power.roll_formula
+      )}}
+      <div
+        class='rollable flexrow'
+        data-action='roll'
+        data-type='power'
+        data-label='{{item.name}}'
+        title="{{localize 'SDM.RollType' type=(localize 'SDM.Power')}}"
+      >
+        <i class='fa-solid fa-dice-d20 roll-icon'></i>
       </div>
       {{/if}}
 
@@ -36,21 +58,41 @@
   </div>
   <div class='item-controls'>
     <a class="item-control">
-      <i class="fa-regular fa-shield" style="{{getReadiedStyle item.system.readied}}" data-action="toggleReadied" {{#if
-        item.system.readied}} title="{{localize 'SDM.ItemReadied' }}" {{else}} title="{{localize 'SDM.ItemNotReadied'}}"
-        {{/if}}></i>
+      <i
+        class="fa-regular fa-shield"
+        style="{{getReadiedStyle item.system.readied}}"
+        data-action="toggleReadied"
+        {{#if item.system.readied}}
+          title="{{localize 'SDM.ItemReadied' }}"
+        {{else}}
+          title="{{localize 'SDM.ItemNotReadied'}}"
+        {{/if}}
+      >
+      </i>
     </a>
     <a class="item-control">
-      <i class="fa-regular fa-exchange" data-action="transferItem" title="{{localize 'DOCUMENT.Transfer'
-        type=(localize 'TYPE.Item' )}}"></i>
+      <i
+        class="fa-regular fa-exchange"
+        data-action="transferItem"
+        title="{{localize 'DOCUMENT.Transfer'
+        type=(localize 'TYPE.Item' )}}"
+      >
+      </i>
     </a>
-    <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=(localize ' TYPE.Item')}}'
-      data-action='viewDoc'>
+    <a
+      class='item-control item-edit'
+      title='{{localize "DOCUMENT.Update"
+      type=(localize "TYPE.Item")}}'
+      data-action='viewDoc'
+    >
       <i class='fas fa-edit'></i>
     </a>
     {{#if @root.editable}}
-    <a class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type=(localize ' TYPE.Item')}}'
-      data-action='deleteDoc'>
+    <a
+      class='item-control item-delete'
+      title='{{localize "DOCUMENT.Delete" type=(localize "TYPE.Item")}}'
+      data-action='deleteDoc'
+    >
       <i class='fas fa-trash'></i>
     </a>
     {{/if}}
