--- a/templates/actor/trait.hbs
+++ b/templates/actor/trait.hbs
@@ -1,25 +1,49 @@
-<li class='item flexrow' data-item-id='{{trait._id}}' data-drag='true' data-document-class='Item'>
+<li
+  class='item flexrow'
+  data-item-id='{{trait._id}}'
+  data-drag='true'
+  data-document-class='Item'
+  title='{{getItemTitle trait}}'
+>
   <div class='item-name'>
     <div class='item-image'>
-      <img src='{{trait.img}}' title='{{trait.name}}' width='24' height='24' />
+      <img src='{{trait.img}}' width='24' height='24' />
     </div>
-    <div title="{{getItemTitle trait}}">
+    <div class='flexrow'>
+      {{#if (and (eq trait.system.type 'power') trait.system.power.roll_formula)}}
+        <div
+          class='rollable flexrow'
+          data-action='roll'
+          data-type='power'
+          data-label='{{trait.name}}'
+          title='{{localize "SDM.RollType" type=(localize 'SDM.Power')}}'
+        >
+          <i class='fa-solid fa-dice-d20 roll-icon'></i>
+        </div>
+      {{/if}}
+
       {{trait.name}}
       {{#if (and (eq trait.system.type 'skill') (gt trait.system.skill.modifier_final 0))}}
-      (+{{trait.system.skill.modifier_final}})
+        (+{{trait.system.skill.modifier_final}})
       {{/if}}
     </div>
   </div>
   <div class='item-controls'>
-    <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=(localize "TYPE.Trait")}}'
-      data-action='viewDoc'>
+    <a
+      class='item-control item-edit'
+      title='{{localize "DOCUMENT.Update" type=(localize 'TYPE.Trait')}}'
+      data-action='viewDoc'
+    >
       <i class='fas fa-edit'></i>
     </a>
     {{#if @root.editable}}
-    <a class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type=(localize "TYPE.Trait")}}'
-      data-action='deleteDoc'>
-      <i class='fas fa-trash'></i>
-    </a>
+      <a
+        class='item-control item-delete'
+        title='{{localize "DOCUMENT.Delete" type=(localize 'TYPE.Trait')}}'
+        data-action='deleteDoc'
+      >
+        <i class='fas fa-trash'></i>
+      </a>
     {{/if}}
   </div>
 </li>
