--- a/templates/custom-roll-dialog.hbs
+++ b/templates/custom-roll-dialog.hbs
@@ -1,7 +1,7 @@
 <div class="custom-roll-modal">
   <h4>{{localize 'SDM.RollTitle' prefix=rollTitlePrefix title=title }}</h4>
   <form class="custom-roll-form">
-    {{#if (ne type 'ability')}}
+    {{#if (and (ne type 'ability') isCharacterActor)}}
     <div class="form-group">
       <label>{{localize 'SDM.Ability'}}</label>
       <select name="selectedAbility">
@@ -10,6 +10,7 @@
       </select>
     </div>
     {{/if}}
+    {{#if isCharacterActor}}
     <div class="form-group mt-10">
       <label for="skillMod">{{localize 'SDM.Skill'}}</label>
       <select name="selectedSkill" id="selectedSkill">
@@ -17,6 +18,7 @@
         {{selectOptions availableSkills valueAttr="id" labelAttr="label" selected=selectedSkill}}
       </select>
     </div>
+    {{/if}}
     <div class="form-group mt-10">
       <label for="modifier">{{localize 'SDM.RollModifier' }}</label>
       <input id="modifier" type="text" name="modifier" value="" />
@@ -38,7 +40,9 @@
     </div>
     <div class="form-group mt-10">
       <label for="shouldExplode">{{localize "SDM.ExplodingDice"}}</label>
-      <input id="shouldExplode" type="checkbox" name="shouldExplode" {{#if (and (ne type 'damage' ) (ne type 'power'))}}checked{{/if}} />
+      <input id="shouldExplode" type="checkbox" name="shouldExplode"
+        {{#if (and (ne type 'damage') (ne type 'power'))}}checked{{/if}}
+      />
     </div>
   </form>
   <br /><br />
