--- a/templates/item/trait/header.hbs
+++ b/templates/item/trait/header.hbs
@@ -21,11 +21,37 @@
       {{#if (eq item.system.type 'skill')}}
       <div class='resource'>
         <label class='resource-label'>{{localize 'SDM.SkillMod'}}</label>
-        <select name='system.skill.modifier'>
+        <select name='system.skill.rank'>
           <option value=''></option>
-          {{selectOptions skillMod valueAttr="value" labelAttr="label" selected=item.system.skill.modifier}}
+          {{#each config.skillMod as |skill key|}}
+          <option value='{{key}}' {{#if (eq (toInt key) ../item.system.skill.rank)}}selected{{/if}}>{{localize skill}}
+            (+{{multiply key ../item.system.skill.modifier_step}})</option>
+          {{/each}}
+          {{!-- {{selectOptions skillMod valueAttr="value" labelAttr="label" selected=item.system.skill.rank}} --}}
         </select>
       </div>
+
+      <div class='resource align-center'>
+        <label class='resource-label'>
+          {{localize 'SDM.SkillCustomModifier'}}
+        </label>
+        <div class='resource-content align-center'>
+          <input type='checkbox' name='system.skill.custom_modifiers' {{checked system.skill.custom_modifiers}} />
+        </div>
+      </div>
+
+        {{#if system.skill.custom_modifiers}}
+        <div class="resource"></div>
+        <div class='resource'>
+          <label class='resource-label'>
+            {{localize 'SDM.SkillModifierStep'}}
+          </label>
+          <div class='resource-content'>
+            <input type='text' name='system.skill.modifier_step' value='{{system.skill.modifier_step}}'
+              data-dtype="Number" />
+          </div>
+        </div>
+        {{/if}}
       {{/if}}
 
       {{#if (eq item.system.type 'power')}}
